Alarm working, now make timer work

--- a/styles.css
+++ b/styles.css
@@ -293,7 +293,7 @@ main{
 /* Class for popup */
 .Active{
     filter: blur(20px);
-    /* user-select: none; */
+    user-select: none;
 }
 
 /* Logic for popup */
@@ -303,10 +303,6 @@ main{
     left: 50%;
     transform: translate(-50%, -50%);
     box-shadow: 0 5px 30px rgba(0, 0, 0, .30);
-    /* visibility: visible; */
-    /* z-index: 500; */
-    opacity: 0;
-    display: none;
     transition: .5s;
 }
 
@@ -724,7 +720,7 @@ main{
 }
 
 .timerPopUp{
-    display: none;
+    /* display: none; */
     top: 50%;
     width: 40%;
     /* z-index: 19; */
